fix overflow x for textchat

--- a/app/assets/stylesheets/showRoom.css.scss
+++ b/app/assets/stylesheets/showRoom.css.scss
@@ -198,7 +198,7 @@ body.rooms_controller {
       background:#EEE;
     }
 
-    #displayChat li{
+    #displayChat .chatMessage{
       margin:10px 5px 5px 5px;
       font-size:15px;
       word-wrap:break-word;
